<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="ask_player1name_text">Enter the name of Player 1:</string>
    <string name="player1name_text_hint">Player 1</string>
    <string name="game_name">Tic Tac Toe</string>
    <string name="ask_player2name_text">Enter the name of Player 2:</string>
    <string name="player2name_text_hint">Player 2</string>
    <string name="ask_numofgames_text">Enter the number of games:</string>
    <string name="number_of_games_hint">Number of games</string>
    <string name="playernames_submit_button">ENTER</string>
    <string name="default_player_turn_text">Player 1\'s turn (X)</string>
    <string name="restart_game_button_text">Reset Game</string>
    <string name="restart_match_button_text">Restart Match</string>
    <string name="Messages">Choose from the two board listed below</string>
    <string name="blank_string" />
    <string name="player_2_default_name">Player 2</string>
    <string name="player_1_default_name">Player 1</string>
    <string name="initial_games_played_0">0</string>
    <string name="bar_demarcate_scores">|</string>
    <string name="continue_button_text">Continue</string>
    <string name="result_text">Result</string>
    <string name="default_max_games">999</string>
    <string name="default_min_games">1</string>
    <string name="x_turn">\'s turn (X)</string>
    <string name="o_turn">\'s turn (O)</string>
    <string name="computer">Computer</string>
    <string name="player">Player</string>
    <string name="player_turn">Player\'s turn</string>
    <string name="computer_turn">Computer\'s turn</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="_3_x_3">3 x 3</string>
    <string name="_4_x_4">4 x 4</string>
    <string name="_5_x_5">5 x 5</string>
    <string name="vs_computer">vs Computer</string>
    <string name="vs_human">vs Human</string>
    <string name="x">X</string>
    <string name="o">O</string>
    <string name="random">Random</string>
    <string name="player_one">Player One</string>
    <string name="player_two">Player Two</string>
    <string name="start">Start</string>
    <string name="restart_image">Restart image</string>
    <string name="logo">Logo</string>
    <string name="reset">reset</string>
    <string name="mute">mute</string>
    <string name="leaderboard">LeaderBoard</string>
    <string name="tie">Tie</string>
    <string name="_0">0</string>
    <string name="clear_image">clear image</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="close">Close</string>
    <string name="about">About</string>
</resources>
