<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:background="#FFA1091D"
    android:orientation="vertical"
tools:context="com.example.smithnwokocha.mytictactoe.Main5x5"
android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/row1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/status"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingEnd="8dp"
                android:paddingStart="8dp">

                <Button
                    android:id="@+id/btn1"
                    style="@style/tic5Btn"
                    tools:text="X" />

                <Button
                    android:id="@+id/btn2"
                    style="@style/tic5Btn"
                    tools:text="X" />

                <Button
                    android:id="@+id/btn3"
                    style="@style/tic5Btn"
                    tools:text="X" />

                <Button
                    android:id="@+id/btn4"
                    style="@style/tic5Btn"
                    tools:text="X" />

                <Button
                    android:id="@+id/btn5"
                    style="@style/tic5Btn"
                    tools:text="X" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/row2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/row1"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingEnd="8dp"
                android:paddingStart="8dp">

                <Button
                    android:id="@+id/btn6"
                    style="@style/tic5Btn"
                    tools:text="X" />

                <Button
                    android:id="@+id/btn7"
                    style="@style/tic5Btn"
                    tools:text="X" />

                <Button
                    android:id="@+id/btn8"
                    style="@style/tic5Btn"
                    tools:text="X" />

                <Button
                    android:id="@+id/btn9"
                    style="@style/tic5Btn"
                    tools:text="X" />

                <Button
                    android:id="@+id/btn10"
                    style="@style/tic5Btn"
                    tools:text="X" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/row3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/row2"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingEnd="8dp"
                android:paddingStart="8dp">

                <Button
                    android:id="@+id/btn11"
                    style="@style/tic5Btn"
                    tools:text="X" />

                <Button
                    android:id="@+id/btn12"
                    style="@style/tic5Btn"
                    tools:text="X" />

                <Button
                    android:id="@+id/btn13"
                    style="@style/tic5Btn"
                    tools:text="X" />

                <Button
                    android:id="@+id/btn14"
                    style="@style/tic5Btn"
                    tools:text="X" />

                <Button
                    android:id="@+id/btn15"
                    style="@style/tic5Btn"
                    tools:text="X" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/row4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/row3"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingEnd="8dp"
                android:paddingStart="8dp">

                <Button
                    android:id="@+id/btn16"
                    style="@style/tic5Btn"
                    tools:text="X" />

                <Button
                    android:id="@+id/btn17"
                    style="@style/tic5Btn"
                    tools:text="X" />

                <Button
                    android:id="@+id/btn18"
                    style="@style/tic5Btn"
                    tools:text="X" />

                <Button
                    android:id="@+id/btn19"
                    style="@style/tic5Btn"
                    tools:text="X" />

                <Button
                    android:id="@+id/btn20"
                    style="@style/tic5Btn"
                    tools:text="X" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/row5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/row4"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingEnd="8dp"
                android:paddingStart="8dp">

                <Button
                    android:id="@+id/btn21"
                    style="@style/tic5Btn"
                    tools:text="X" />

                <Button
                    android:id="@+id/btn22"
                    style="@style/tic5Btn"
                    tools:text="X" />

                <Button
                    android:id="@+id/btn23"
                    style="@style/tic5Btn"
                    tools:text="X" />

                <Button
                    android:id="@+id/btn24"
                    style="@style/tic5Btn"
                    tools:text="X" />

                <Button
                    android:id="@+id/btn25"
                    style="@style/tic5Btn"
                    tools:text="X" />

            </LinearLayout>


            <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="#FF0929F2"
                android:padding="8dp"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="26sp"
                tools:text="Computer's turn" />

            <Button
                android:id="@+id/reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/row5"
                android:layout_margin="4dp"
                android:text="@string/reset"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/reset"
                android:background="#cccccc"
                android:fontFamily="@font/progress"
                android:padding="4dp"
                android:text="Score-board"
                android:textAlignment="center"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/stat_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lead"
                android:background="#ccc">

                <TextView
                    android:id="@+id/player_one"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/computer"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tie"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/player_two"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/player"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/stat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/stat_name"
                android:background="#ccc">

                <TextView
                    android:id="@+id/player_one_stat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tie_stat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/player_two_stat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/stat"
                android:padding="16dp">

                <Button
                    android:id="@+id/level_one"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/easy"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/level_two"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#ccc"
                    android:text="@string/medium"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/level_three"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/hard"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/notify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="16dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/notifyTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="26sp"
                    tools:text="Computer's turn" />

                <Button
                    android:id="@+id/close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/close" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>
